--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,38 +4,49 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2">Project 1</a></strong>
+			- The Matrix Multiplication is being implemented in C using Inter Process Communication mechanism such as anonymous pipes.
+			  It creates multiple worker processes by client process and communication within processes happens in such a way that client 
+			  would distribute input data for each multiplication among the worker processes in order to get more concurrency. In short, 
+			  designed and developed IPC protocol and structure between client and worker processes. Worker process receives input data , 
+			  performs multiplication and sends response data back to the client. 
 		</h5>
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 2</a></strong>
-			- An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire.
-			Te his neglegentur consectetuer.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj3/files">Project 2</a></strong>
+			- The Matrix Multiplication is being implemented in C using Inter Process Communication mechanism such as named pipes.
+			  A long running daemon concurrent server waits on well-known FIFO to listen to client request and after accepting the request, 
+			  server creates a worker process using double fork technique to perform multiplication of matrices sent by the client using multiplication 
+			  function which is dynamically loaded module and in response, it returns the time taken at user, system and both the level. 
 		</h5>
     	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 3</a></strong>
-			- An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Shared%20Memory/prj4">Project 3</a></strong>
+		        - Uses semaphores, shared memory segment with client server mechanism to perform matrix multiplication 
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 4</a></strong>
-			- Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem,
-			ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
+			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Socket/prj5">Project 4</a></strong>
+			- Concept use Socket IPC in which Client/Server in which client sends matrices and server performs multiplication and send time response back to the client
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
-			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
-			eam doming blandit facilisis.
+			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/Object%20Oriented%20C/prj1">Project 5</a></strong>
+			- Object Oriented C Matrix Multiplication
+			  Abstract Matrix Implementation : It consists of operations such as transpose, multiplications which can be implemented with the help of other operations such as 
+			  getting rows, columns and entries in the matrices without the knowledge of concrete implementations. This is known to be Abstract Matrix Implementation.
+			  Dense Matrix Implementation : It consists of accessing matrices elements in row major order and inherit operations from Abstract Matrix and implements only those 
+			  which are not implemented in Abstract matrix. It implements multiplication operation by inheriting it from Abstract Matrix. 
+			  Smart Matrix Implementation: It consists of accessing matrices elements in column major order and inherit operations from Dense Matrix and override the multiplication 
+			  operation in addition to taking a transpose of a multiplier.
 		</h5>
 		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 6</a></strong>
-			- Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem,
-			usu ex sapientem gubergren. Tamquam admodum ei usu.
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1">Project 6</a></strong>
+			- Phone directory uses quick sort algorithm
 		</h5>
 		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 7</a></strong>
-			- Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum
-			tractatos partiendo at, debet ubique oporteat ut his.
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2">Project 7</a></strong>
+			- Strassen and tromino algorithm implementation
+		</h5>
+	    	<h5>
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3">Project 8</a></strong>
+			- Dijikstra Algorithm and Brute force, greedy algorithm and dynamic programming knapsack solution
 		</h5>
 
 
