--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -21,7 +21,7 @@
 		</h5>
     	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Shared%20Memory/prj4" target="_blank">Project 3</a></strong>
-		        - Concept uses Semaphores, Shared Memory Segment IPC client server mechanism to perform matrices multiplication. 
+		        - Concept uses Semaphores, <strong>Shared Memory</strong> Segment IPC client server mechanism to perform matrices multiplication. 
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Socket/prj5" target="_blank">Project 4</a></strong>
@@ -30,7 +30,7 @@
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/Object%20Oriented%20C/prj1" target="_blank">Project 5</a></strong>
-			- Object Oriented Programming in C <br/> 
+			- <strong>Object Oriented Programming in C </strong><br/> 
 			  <strong>Abstract Matrix</strong> Implementation : It consists of operations such as transpose, multiplications which can be implemented with the help of other operations such as 
 			  getting rows, columns and entries in the matrices without the knowledge of concrete implementations. This is known to be Abstract Matrix Implementation.<br/>
 			  <strong>Dense Matrix</strong> Implementation : It consists of accessing matrices elements in row major order and inherit operations from Abstract Matrix and implements only those 
@@ -40,16 +40,16 @@
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 6</a></strong>
-			- Phone Directory C based implementation. Sorting uses quick sort algorithm. 
+			- Phone Directory C based implementation. Sorting uses <strong>quick sort</strong> algorithm. 
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2" target="_blank">Project 7</a></strong>
-			- Strassen and Tromino algorithm C based implementation
+			- <strong>Strassen and Tromino</strong> algorithm C based implementation
 		</h5>
 	    	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3" target="_blank">Project 8</a></strong>
-			- Dijikstra Algorithm C based implementation
-			  Brute force, Greedy and Dynamic programming 0/1 Knapsack C based implementation
+			- <strong>Dijikstra</strong> Algorithm C based implementation
+			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
 		</h5>
 
 
