--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -48,7 +48,7 @@
 		</h5>
 	    	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3" target="_blank">Project 8</a></strong>
-			- <strong>Dijikstra</strong> Algorithm C based implementation
+			- <strong>Dijikstra</strong> Algorithm C based implementation <br/>
 			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
 		</h5>
 
