--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
+        <li><a href="http://mithun05.github.io/vitae" target="_blank">EXPERIENCE</a></li>
         <li><a href="files/MithunDeshpandeLatestResume.pdf" target="_blank">RESUME</a></li>
       </ul>
     </div>
