--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,9 +1,73 @@
+<style>
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active, .accordion:hover {
+    background-color: #ccc;
+}
+
+.accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2212";
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+</style>
+
 <section id="projects">
 <div class="container">
   <h3>Projects</h3>
+
+
+<button class="accordion">C/C++ Algorithm</button>
+<div class="panel">
   <div class="panel panel-default">
     <div class="panel-body">
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 6</a></strong>
+			- Phone Directory C based implementation. Sorting uses <strong>quick sort</strong> algorithm. 
+		</h5>
 		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2" target="_blank">Project 7</a></strong>
+			- <strong>Strassen and Tromino</strong> algorithm C based implementation
+		</h5>
+	    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3" target="_blank">Project 8</a></strong>
+			- <strong>Dijikstra</strong> Algorithm C based implementation <br/>
+			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
+		</h5>
+	    </div>
+	  </div>
+</div>
+
+<button class="accordion">C/C++ Systems </button>
+<div class="panel">
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    <h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2" target="_blank">Project 1</a></strong>
 			- The Matrix Multiplication is being implemented in C using Inter Process Communication(IPC) mechanism such as <strong>Anonymous Pipes.</strong>
 			  The Client creates multiple worker processes and communication within processes happens in such a way that client 
@@ -38,22 +102,33 @@
 			  <strong>Smart Matrix</strong> Implementation: It consists of accessing matrices elements in column major order and inherit operations from Dense Matrix and override the multiplication 
 			  operation in addition to taking a transpose of a multiplier. 
 		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 6</a></strong>
-			- Phone Directory C based implementation. Sorting uses <strong>quick sort</strong> algorithm. 
-		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2" target="_blank">Project 7</a></strong>
-			- <strong>Strassen and Tromino</strong> algorithm C based implementation
-		</h5>
-	    	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3" target="_blank">Project 8</a></strong>
-			- <strong>Dijikstra</strong> Algorithm C based implementation <br/>
-			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
-		</h5>
+	    </div>
+	  </div>
+</div>
 
-
-    </div>
-  </div>
+<button class="accordion">Java</button>
+<div class="panel">
+  <div class="panel panel-default">
+    <div class="panel-body">
+	    </div>
+	  </div>
+</div>
 </div>
 </section>
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+  acc[i].addEventListener("click", function() {
+    this.classList.toggle("active");
+    var panel = this.nextElementSibling;
+    if (panel.style.maxHeight){
+      panel.style.maxHeight = null;
+    } else {
+      panel.style.maxHeight = panel.scrollHeight + "px";
+    } 
+  });
+}
+</script>
