--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,3 +1,5 @@
+<html>
+	<head>
 <style>
 .accordion {
     background-color: #eee;
@@ -36,7 +38,8 @@
     transition: max-height 0.2s ease-out;
 }
 </style>
-
+</head>
+	<body>
 <section id="projects">
 <div class="container">
   <h3>Projects</h3>
@@ -124,3 +127,5 @@ for (i = 0; i < acc.length; i++) {
   });
 }
 </script>
+		</body>
+	</html>
