--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -46,7 +46,8 @@
 
 
 <button class="accordion">C/C++ Algorithm</button>
-<div class="panel">
+<div class="panel panel-default">
+    <div class="panel-body">
  
 	    <h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 6</a></strong>
@@ -62,9 +63,11 @@
 			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
 		</h5>
 </div>
+	</div>
 
 <button class="accordion">C/C++ Systems </button>
-<div class="panel">
+<div class="panel panel-default">
+    <div class="panel-body">
   
 	    <h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2" target="_blank">Project 1</a></strong>
@@ -103,11 +106,13 @@
 		</h5>
 	    
 </div>
+	</div>
 
 <button class="accordion">Java</button>
-<div class="panel">
-  
-</div>
+<div class="panel panel-default">
+    <div class="panel-body">
+  </div>
+	</div>
 </div>
 </section>
 
