--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,57 +45,31 @@
   <h3>Projects</h3>
 
 
-<button class="accordion">C/C++ Algorithm</button>
+<button class="accordion">C Algorithms</button>
 <div class="panel panel-default">
     <div class="panel-body">
  
 	    <h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 1</a></strong>
-			- Phone Directory C based implementation. Sorting uses <strong>quick sort</strong> algorithm. 
+			- Phone Directory implementation. Sorting uses <strong>Quick sort</strong> algorithm. 
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2" target="_blank">Project 2</a></strong>
-			- <strong>Strassen and Tromino</strong> algorithm C based implementation
-		</h5>
+			- <strong>Strassen and Tromino</strong> algorithm  implementation
+	        </h5>
 	    	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project3" target="_blank">Project 3</a></strong>
-			- <strong>Dijikstra</strong> Algorithm C based implementation <br/>
-			  Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> C based implementation
+			- <strong>Dijikstra</strong> algorithm implementation <br/>
+			- Brute force, Greedy and Dynamic programming <strong>0/1 Knapsack</strong> implementation
 		</h5>
 </div>
 	</div>
 
-<button class="accordion">C/C++ Systems </button>
+<button class="accordion">C Systems Level</button>
 <div class="panel panel-default">
     <div class="panel-body">
-  
-	    <h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2" target="_blank">Project 1</a></strong>
-			- The Matrix Multiplication is being implemented in C using Inter Process Communication(IPC) mechanism such as <strong>Anonymous Pipes.</strong>
-			  The Client creates multiple worker processes and communication within processes happens in such a way that client 
-			  would distribute input data for each row multiplication among the worker processes in order to achieve more concurrency. In short, 
-			  designed and developed IPC protocol and structure between client and worker processes. Worker process receives input data , 
-			  performs multiplication and sends response data back to the client.
-		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj3/files" target="_blank">Project 2</a></strong>
-			- The Matrix Multiplication is being implemented in C using Inter Process Communication (IPC) mechanism such as <strong>Named Pipes.</strong>
-			  A long running daemon concurrent server waits on well-known FIFO to listen to client request and after accepting the request, 
-			  server creates a worker process using double fork technique to perform multiplication of matrices sent by the client using multiplication 
-			  function which is dynamically loaded module and in response, it returns the time taken at user, system level i.e. how many cycle ticks it needed to 
-			  perform the matrix multiplication calculation.
-		</h5>
-    	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Shared%20Memory/prj4" target="_blank">Project 3</a></strong>
-		        - Concept uses Semaphores, <strong>Shared Memory</strong> Segment IPC client server mechanism to perform matrices multiplication. 
-		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Socket/prj5" target="_blank">Project 4</a></strong>
-			- Concept uses <strong>Socket IPC</strong> Client/Server mechanism in which client sends matrices to the server and server performs matrices multiplication 
-			  and send time response taken back to the client.
-		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/Object%20Oriented%20C/prj1" target="_blank">Project 5</a></strong>
+  		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/Object%20Oriented%20C/prj1" target="_blank">Project 1</a></strong>
 			- <strong>Object Oriented Programming in C </strong><br/> 
 			  <strong>Abstract Matrix</strong> Implementation : It consists of operations such as transpose, multiplications which can be implemented with the help of other operations such as 
 			  getting rows, columns and entries in the matrices without the knowledge of concrete implementations. This is known to be Abstract Matrix Implementation.<br/>
@@ -104,15 +78,100 @@
 			  <strong>Smart Matrix</strong> Implementation: It consists of accessing matrices elements in column major order and inherit operations from Dense Matrix and override the multiplication 
 			  operation in addition to taking a transpose of a multiplier. 
 		</h5>
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2" target="_blank">Project 2</a></strong>
+			- The Matrix Multiplication is being implemented in C using Inter Process Communication(IPC) mechanism such as <strong>Anonymous Pipes.</strong>
+			  The Client creates multiple worker processes and communication within processes happens in such a way that client 
+			  would distribute input data for each row multiplication among the worker processes in order to achieve more concurrency. In short, 
+			  designed and developed IPC protocol and structure between client and worker processes. Worker process receives input data , 
+			  performs multiplication and sends response data back to the client.
+		</h5>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj3/files" target="_blank">Project 3</a></strong>
+			- The Matrix Multiplication is being implemented in C using Inter Process Communication (IPC) mechanism such as <strong>Named Pipes.</strong>
+			  A long running daemon concurrent server waits on well-known FIFO to listen to client request and after accepting the request, 
+			  server creates a worker process using double fork technique to perform multiplication of matrices sent by the client using multiplication 
+			  function which is dynamically loaded module and in response, it returns the time taken at user, system level i.e. how many cycle ticks it needed to 
+			  perform the matrix multiplication calculation.
+		</h5>
+    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Shared%20Memory/prj4" target="_blank">Project 4</a></strong>
+		        - Concept uses Semaphores, <strong>Shared Memory</strong> Segment IPC client server mechanism to perform matrices multiplication. 
+		</h5>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Socket/prj5" target="_blank">Project 5</a></strong>
+			- Concept uses <strong>Socket IPC</strong> Client/Server mechanism in which client sends matrices to the server and server performs matrices multiplication 
+			  and send time response taken back to the client.
+		</h5>
+		
 	    
 </div>
 	</div>
 
-<button class="accordion">Java</button>
+<button class="accordion">C Kernel Modules</button>
 <div class="panel panel-default">
-    <div class="panel-body">
+    <div class="panel-body">	
+
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/OS/tree/master/mdeshpa1Assignment3/mdeshpa1Assignment3" target="_blank">Project 1</a></strong>
+			- <strong>Character device driver</strong>
+			- A classical producer consumer problem. A miscellaneous character device driver or also known as a kernel level pipe which maintains a FIFO queue with its size can be configured as a kernel parameter is used to exchange strings messages between user level processes. 
+			  Multiple concurrent processes can read from the device driver as well as write to the device driver.
+			  Implemented a kernel module that creates a character device driver that stores process ID, parent process ID, state and CPU on which a process is running of all currently running processes. And this stored information has been shown to the user using user level processes.
+			  Explored process hierarchy tree using fork, exec , wait, getpid and getppid system calls.
+		</h5>
+    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/OS/tree/master/mdeshpa1Assignment4/mdeshpa1Assignment4" target="_blank">Project 2</a></strong>
+		        - <strong>JProbes to track page faults</strong>
+			- Implemented a kernel module that accepts process ID as a kernel parameter of a running process and logs all the virtual addresses of a target process and time at which the process generates page faults to system log
+			  Plotted the graphs of virtual addresses against time (as obtained above) for three different kinds of applications such as kernel compilation, sysbench, network and observed memory access patterns of a targeted process
+		</h5>
+	    	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/OS/blob/master/mdeshpa1_proj1/process_hierarchy_main.c" target="_blank">Project 3</a></strong>
+			- <strong>Procee Tree Hierarchy</strong>
+			- Recursively create a process hierarchy tree that given H levels deep, print out the process tree information as the tree is being created and then systamatically terminates all the 
+   			  processes in the tree. Use of getpid, wait and execvp system calls. 
+		</h5>
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Systems-Programming/tree/master/IPC%20Pipes/prj2" target="_blank">Project 4</a></strong>
+			- <strong>Active Processes Retrieval Module</strong>
+		    	- Written Kernel module that returns all the currently running processes to the user module. In short, how user space communicates with the kernel module via character device drivers.
+		</h5>
   </div>
 	</div>
+	
+	
+<button class="accordion">C++</button>
+<div class="panel panel-default">
+    <div class="panel-body">	
+		<h3>Please contact me to get the source code for the following implementations</h3>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 1</a></strong>
+			- <strong>Rvalue References</strong>
+			- Comparing the performance between Copy constructor and Move constructor
+		</h5>
+    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 2</a></strong>
+		        - <strong>Polymorphic Function Wrapper</strong>
+			- Storing the callable function type which contains return type and parameter list together and then call the callable using type erasure technique
+		</h5>
+	    	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 3</a></strong>
+			- <strong>Shared Pointer</strong>
+			- Implemented therad safe, exception safe and reference counting Smart Pointer  
+		</h5>
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 4</a></strong>
+			- <strong>Printf Call</strong>
+		    	- Printf style format library in c++ using tuple and universal reference, perfect forwarding mechanism
+		</h5>
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 4</a></strong>
+			- <strong>Map</strong>
+		    	- Implemented custom Map similar to std::Map using AVL tree data structure
+		</h5>
+  </div>
+	</div>	
 </div>
 </section>
 
