--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -144,7 +144,7 @@
 <button class="accordion">C++</button>
 <div class="panel panel-default">
     <div class="panel-body">	
-		<h3>Please contact me to get the source code for the following implementations</h3>
+		<h4>Please contact me to get the source code for the following implementations</h4>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 1</a></strong>
 			- <strong>Rvalue References</strong>
@@ -172,6 +172,20 @@
 		</h5>
   </div>
 	</div>	
+	
+	<button class="accordion">Java</button>
+<div class="panel panel-default">
+    <div class="panel-body">	
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Computer-Architecture" target="_blank">Project 1</a></strong>
+			- <strong>APEX pipeline</strong>
+			- Developed In Order and Out Of Order Simulator in Java using register renaming, unified register file, centralized issue queue and reorder buffer.
+			- First in first out Issue Queue policy is being implemented.
+			- It simulates the working of the processor with multiple function units, multiple write ports, branch handling , branch bubbles, and instruction fetching.
+		</h5>
+    	<h5>		    
+  </div>
+	</div>
 </div>
 </section>
 
