--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -144,7 +144,7 @@
 <button class="accordion">C++</button>
 <div class="panel panel-default">
     <div class="panel-body">	
-		<h4>Please contact me to get the source code for the following implementations</h4>
+		<h6>Please contact me to get the source code for the following implementations</h6>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 1</a></strong>
 			- <strong>Rvalue References</strong>
@@ -204,6 +204,10 @@ for (i = 0; i < acc.length; i++) {
     } 
   });
 }
+	
+$(document).ready(function() {
+  $('.accordion-item-1 .accordion-content').show();
+});	
 </script>
 		</body>
 	</html>
