--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -44,6 +44,15 @@
 <div class="container">
   <h3>Projects</h3>
 
+	
+<button class="accordion">Android Applications</button>
+<div class="panel panel-default">
+    <div class="panel-body">
+	    	<h5>
+		    Check Mobile Apps at <strong><a href="http://mithun05.github.io/vitae" target="_blank">Experience</a></strong> 
+		</h5>
+</div>
+	</div>	
 
 <button class="accordion">C Algorithms</button>
 <div class="panel panel-default">
@@ -163,15 +172,46 @@
 	    <h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 4</a></strong>
 			- <strong>Printf Call</strong>
-		    	- Printf style format library in c++ using tuple and universal reference, perfect forwarding mechanism
+		    	- Printf style format library in c++ using tuple and universal reference, perfect forwarding mechanism. It supports IO manipulators. It uses partial specialization,
+		          method overloading using enable-if feature, and variadic arguments. Trying to find midway of printf and cout call. 
 		</h5>
 	    <h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 4</a></strong>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 5</a></strong>
 			- <strong>Map</strong>
-		    	- Implemented custom Map similar to std::Map using AVL tree data structure
+		    	- Implemented subset operations of std::map in template class named Map using AVL tree data structure. Increment and decrement operations performed
+		          in O(1) rather than O(nlogn) by adding left, right and parent node to the node struct.
+		</h5>
+	     <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 6</a></strong>
+			- <strong>Generic Container</strong>
+		    	- Implemented generic container using double ended queue data structure. It can hold primitive and class types. Used internal qsort to 
+		     	  store the data in sorted order.
+		</h5>
+	    
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/C-/tree/master/mdeshpa1_B00670658_a3_p2" target="_blank">Project 7</a></strong>
+			- <strong>Arbitrary Dimension Array Class Template</strong>
+		    	- Implemented array class template that can be instantiated with any number of dimensions. Used partial specialization and variadic number of 
+		          arguments mechanism to achieve this functionality.
 		</h5>
   </div>
 	</div>	
+	
+	
+	<button class="accordion">ML Algorithms in Python</button>
+<div class="panel panel-default">
+    <div class="panel-body">
+ 
+	    <h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_proj1" target="_blank">Project 1</a></strong>
+			- Implemented ID3 decision tree classifier. 
+		</h5>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/Mithun05/Algorithm/tree/master/mdeshpa1_project2" target="_blank">Project 2</a></strong>
+			- Classify emails as spam or ham using Naive bayes, LRMAP, Perceptron training rule and gradient descent perceptron rule
+	        </h5>
+</div>
+	</div>
 	
 	<button class="accordion">Java</button>
 <div class="panel panel-default">
