--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,11 +45,20 @@
   <h3>Projects</h3>
 
 	
+<button class="accordion">LeetCode Problems</button>
+<div class="panel panel-default">
+    <div class="panel-body">
+	    	<h5>
+		    Please Check Practice Samples at <strong><a href="https://github.com/Mithun05/Leetcode-problems" target="_blank">Weblink</a></strong> 
+		</h5>
+</div>
+	</div>		
+	
 <button class="accordion">Android Applications</button>
 <div class="panel panel-default">
     <div class="panel-body">
 	    	<h5>
-		    Check Mobile Apps at <strong><a href="http://mithun05.github.io/vitae" target="_blank">Experience</a></strong> 
+		    Please Check Mobile Apps at <strong><a href="http://mithun05.github.io/vitae" target="_blank">Experience</a></strong> 
 		</h5>
 </div>
 	</div>	
